# full-quart-smorest

./: .bandit  .gitignore  Dockerfile  app.py  pyproject.toml
cmds/: production_create.sql
config/: testing.toml
deploy/nginx/: flask.conf
plugins/sa/: abstract.py  query.py  render.py  statement.py
smorest_full/extensions/: __init__.py
smorest_full/extensions/sa/: __init__.py
smorest_full/plugins/sa/: __init__.py  abstract.py  query.py  render.py  statement.py
tasks/: __init__.py  logger.py
tasks/app/: _utils.py  boilerplates.py  config.py  crud.py  db.py  env.py  init.py  renders.py  run.py  tests.py  users.py  winpress.py
tests/: pytest.ini  test_smorest_full.py
tests/plugins/sa/: conftest.py  test_sa.py
